test/libhyperion/syntaxTests/denominations/combining_hex_and_denomination.hyp
contract C {
	uint constant x = 0x01 planck;
}
// ----
// TypeError 5145: (32-43): Hexadecimal numbers cannot be used with unit denominations. You can use an expression of the form "0x1234 * 1 day" instead.
